--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -30,4 +30,15 @@
 # available at https://guides.rubyonrails.org/i18n.html.
 
 en:
-  hello: "Hello world"
+  activerecord:
+    attributes:
+      form_field/field_kind:
+        string: Short Answer
+        text: Long Answer
+        check_boxes: Checkboxes
+        radio_buttons: Multiple Choice
+        select_box: Dropdown
+        file: File Upload
+        datetime: Date & Time
+        date: Date
+        time: Time
